--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -74,6 +74,14 @@
   --ion-color-light-contrast-rgb: 0, 0, 0;
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
+
+  /** mycolor **/
+  --ion-color-mycolor: #da0a8a;
+  --ion-color-mycolor-rgb: 218, 10, 138;
+  --ion-color-mycolor-contrast: #ffffff;
+  --ion-color-mycolor-contrast-rgb: 255, 255, 255;
+  --ion-color-mycolor-shade: #c00979;
+  --ion-color-mycolor-tint: #de2396;
 }
 
 @media (prefers-color-scheme: dark) {
