--- a/src/app/clientes/clientes.page.html
+++ b/src/app/clientes/clientes.page.html
@@ -1,16 +1,9 @@
-<ion-header [translucent]="true">
-  <ion-toolbar color="mycolor">
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
-    <ion-title>Clientes</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header></app-header>
 
 <ion-content>
   <div id="container">
     <p>Esta es la página de <strong>Clientes</strong>, generada con el comando</p>
-    <pre><font color="#5555FF"><b>~</b></font>$ ionic g page clientes</pre>
+    <pre id="terminal"><font color="#5555FF"><b>~</b></font>$ ionic g page clientes</pre>
     <ion-button color="mycolor" [routerLink]="['/inicio']">Go to Inicio</ion-button>
   </div>
 </ion-content>
