--- a/src/app/clientes/clientes.page.scss
+++ b/src/app/clientes/clientes.page.scss
@@ -7,12 +7,11 @@
     transform: rotateY(-50%);
 }
 
-ion-toolbar {
+ion-button {
     background-color: var(--ion-color-mycolor);
     color: white;
 }
 
-ion-button {
-    background-color: var(--ion-color-mycolor);
-    color: white;
+#terminal {
+    font-size: small;
 }
