Clase: 03-10-2021 Titulo dinamico y Ion Alert

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,6 +4,6 @@
       <ion-back-button defaultHref="/" text="back"></ion-back-button>
       <!-- <ion-menu-button></ion-menu-button> -->
     </ion-buttons>
-    <ion-title> Clase 2-oct-2021 </ion-title>
+    <ion-title>{{ titulo }}</ion-title>
   </ion-toolbar>
 </ion-header>
