--- a/src/app/actions/actions.page.html
+++ b/src/app/actions/actions.page.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
+<app-header titulo="Actions"></app-header>
 
 <ion-content class="ion-padding">
   <ion-button (click)="onClick()" expand="block" color="mycolor">
